change customer log in variables